Add authentication via bearer token

--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,10 @@ basicAuth:
   username: admin
   password: admin
 
+bearerAuth:
+  active: false
+  signingKey: my_secret_key
+
 scripts:
   - name: test
     script: ./examples/test.sh
