Feature: Add support for TLS, Basic Auth and Bearer Token (#2)
* Add tls option

* Adjust documentation for tls option

* Add basic authentication

* Move command-line flags for tls and authentication to config file

* Fix config

* Add authentication via bearer token

* Adjust documentation for the scheme of the config file

* Fix documentation for command-line flags

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,17 @@
+tls:
+  active: false
+  crt: server.crt
+  key: server.key
+
+basicAuth:
+  active: false
+  username: admin
+  password: admin
+
+bearerAuth:
+  active: false
+  signingKey: my_secret_key
+
 scripts:
   - name: test
     script: ./examples/test.sh
