Add new test case The new test case use use the new 'direct run' feature

--- a/config.yaml
+++ b/config.yaml
@@ -19,3 +19,5 @@ scripts:
     script: ./examples/ping.sh
   - name: helloworld
     script: ./examples/helloworld.sh test
+  - name: curltest
+    script: ./bin/curltest
