--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,16 @@ jobs:
     runs-on: ubuntu-20.04
     name: Release
     steps:
-      - name: Set up Go 1.16
+      - name: Set up Go 1.17
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: 1.17
         id: go
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Get dependencies
         run: go mod download
@@ -30,6 +32,7 @@ jobs:
       - name: Upload
         run: |
           ./upload.sh ./bin/script_exporter-darwin-amd64 application/x-binary
+          ./upload.sh ./bin/script_exporter-darwin-arm64 application/x-binary
           ./upload.sh ./bin/script_exporter-linux-amd64 application/x-binary
           ./upload.sh ./bin/script_exporter-linux-armv7 application/x-binary
           ./upload.sh ./bin/script_exporter-linux-arm64 application/x-binary
