Add example for script arguments
This commit adds a new example, which shows the usage of arguments
passed in the script configuration and via the "params" property.

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -29,3 +29,5 @@ scripts:
       enforced: true
   - name: docker
     script: ./examples/docker.sh
+  - name: args
+    script: ./examples/args.sh test1 test2
