Add .idea to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ Temporary Items
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+################################
+########### Jetbrains ##########
+################################
+.idea/
 
 ################################
 ############ Custom ############
