--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -1,23 +1,22 @@
-name: Test
+name: Continuous Integration
 
 on:
   pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-20.04
-    name: Test
+  go:
+    name: Go
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.18
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Setup
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
 
       - name: Get dependencies
         run: go mod download
