--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,16 +9,15 @@ jobs:
     runs-on: ubuntu-20.04
     name: Release
     steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.18
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Setup
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
 
       - name: Get dependencies
         run: go mod download
