--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -16,7 +16,9 @@ jobs:
       - name: Setup
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version-file: go.mod
+          cache: true
+          cache-dependency-path: go.sum
 
       - name: Get dependencies
         run: go mod download
