--- a/.github/workflows/continuous-delivery-docker.yaml
+++ b/.github/workflows/continuous-delivery-docker.yaml
@@ -21,11 +21,10 @@ jobs:
         id: tag
         run: |
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            DOCKER_TAG="${GITHUB_REF:10}"
+            echo TAG=${GITHUB_REF:10} >> $GITHUB_ENV
           else
-            DOCKER_TAG="main"
+            echo TAG=main >> $GITHUB_ENV
           fi
-          echo ::set-output name=tag::${DOCKER_TAG}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -41,10 +40,10 @@ jobs:
 
       - name: Build and Push Docker Image
         id: docker_build
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           push: true
           context: .
           file: ./Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-          tags: ricoberger/script_exporter:${{ steps.tag.outputs.tag }}
+          tags: ricoberger/script_exporter:${{ env.TAG }}
