--- a/charts/script-exporter/values.yaml
+++ b/charts/script-exporter/values.yaml
@@ -118,6 +118,9 @@ service:
   annotations: {}
   labels: {}
 
+serviceAccount:
+  name: ""
+
 ## Create a Service Monitor for the Prometheus Operator.
 ## See: https://github.com/coreos/prometheus-operator
 ##
