--- a/charts/script-exporter/templates/servicemonitor.yaml
+++ b/charts/script-exporter/templates/servicemonitor.yaml
@@ -1,37 +1,5 @@
 {{- if .Values.serviceMonitor.enabled }}
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: {{ include "script-exporter.fullname" . }}
-  labels:
-    {{- include "script-exporter.labels" . | nindent 4 }}
-    {{- include "script-exporter.serviceMonitorLabels" . | nindent 4 }}
-    namespace: {{ default .Release.Namespace .Values.serviceMonitor.namespace }}
-spec:
-  endpoints:
-    - port: http
-      {{- with .Values.serviceMonitor.interval }}
-      interval: {{ . }}
-      {{- end }}
-      {{- with .Values.serviceMonitor.scrapeTimeout }}
-      scrapeTimeout: {{ . }}
-      {{- end }}
-      path: /metrics
-      honorLabels: {{ .Values.serviceMonitor.honorLabels }}
-      {{- with .Values.serviceMonitor.metricRelabelings }}
-      metricRelabelings:
-      {{ toYaml . | nindent 6 }}
-      {{- end }}
-      {{- with .Values.serviceMonitor.relabelings }}
-      relabelings:
-      {{ toYaml . | nindent 6 }}
-      {{- end }}
-  namespaceSelector:
-    matchNames:
-      - {{ .Release.Namespace }}
-  selector:
-    matchLabels:
-      {{- include "script-exporter.selectorLabels" . | nindent 6 }}
+{{- if .Values.serviceMonitor.autoCreate.enabled }}
 {{- range (fromYaml .Values.config).scripts }}
 ---
 apiVersion: monitoring.coreos.com/v1
@@ -46,13 +14,29 @@ spec:
   endpoints:
     - path: /probe
       port: http
+      {{- with $.Values.serviceMonitor.interval }}
+      interval: {{ . }}
+      {{- end }}
+      {{- with $.Values.serviceMonitor.scrapeTimeout }}
+      scrapeTimeout: {{ . }}
+      {{- end }}
       params:
         script:
           - {{ .name }}
+      metricRelabelings:
+        - action: replace
+          replacement: {{ .name }}
+          targetLabel: script
+      {{- with $.Values.serviceMonitor.metricRelabelings }}
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
       relabelings:
         - action: replace
           replacement: {{ .name }}
           targetLabel: script
+      {{- with $.Values.serviceMonitor.relabelings }}
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
   namespaceSelector:
     matchNames:
       - {{ $.Release.Namespace }}
@@ -60,4 +44,53 @@ spec:
     matchLabels:
       {{- include "script-exporter.selectorLabels" $ | nindent 6 }}
 {{- end }}
-{{- end -}}
+{{- else }}
+{{- range .Values.serviceMonitor.targets }}
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  labels:
+    {{- include "script-exporter.labels" $ | nindent 4 }}
+    {{- include "script-exporter.serviceMonitorLabels" $ | nindent 4 }}
+    {{- with .labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  name: {{ include "script-exporter.fullname" $ }}-{{ kebabcase .name }}
+  namespace: {{ default $.Release.Namespace $.Values.serviceMonitor.namespace }}
+spec:
+  endpoints:
+    - path: /probe
+      port: http
+      {{- with .interval | default $.Values.serviceMonitor.interval }}
+      interval: {{ . }}
+      {{- end }}
+      {{- with .scrapeTimeout | default $.Values.serviceMonitor.scrapeTimeout }}
+      scrapeTimeout: {{ . }}
+      {{- end }}
+      params:
+        script:
+          - {{ .script }}
+      metricRelabelings:
+        - action: replace
+          replacement: {{ .script }}
+          targetLabel: script
+      {{- with .additionalMetricsRelabels | default $.Values.serviceMonitor.metricRelabelings }}
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
+      relabelings:
+        - action: replace
+          replacement: {{ .script }}
+          targetLabel: script
+      {{- with .additionalRelabeling | default $.Values.serviceMonitor.relabelings }}
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
+  namespaceSelector:
+    matchNames:
+      - {{ $.Release.Namespace }}
+  selector:
+    matchLabels:
+      {{- include "script-exporter.selectorLabels" $ | nindent 6 }}
+{{- end }}
+{{- end }}
+{{- end }}
