Define Additional Scripts via Separate Config Files
It is now possible to define additional scripts for the exporter via
separate config files. For that a new option `scripts_configs` was
added, which can be used to set a list of files, which are containing
additional script configuration.

The configuration must look as follows:

```
script_configs:
  - /path/to/file.yaml
```

The content of the additional scripts configuration file, can only
contain a list of scripts, e.g.

```yaml
- name: test
  command: ./examples/test.sh
```

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -19,8 +19,6 @@ discovery:
   # path: /prefix-path
 
 scripts:
-  - name: test
-    command: ./examples/test.sh
   - name: ping
     command: ./examples/ping.sh
     cacheDuration: 1m
@@ -45,3 +43,6 @@ scripts:
     args:
       - test1
       - test2
+
+scripts_configs:
+  - ./examples/scripts_*.yaml
