--- a/charts/script-exporter/values.yaml
+++ b/charts/script-exporter/values.yaml
@@ -129,7 +129,7 @@ serviceMonitor:
   ## https://github.com/coreos/prometheus-operator for script-exporter itself
   ##
   selfMonitor:
-    enabled: true
+    enabled: false
     additionalMetricsRelabels: {}
     additionalRelabeling: []
     labels: {}
