Add GitHub Container Registry
Add the Docker image to the GitHub Container Registry as alternative to
DockerHub and make GHCR the default in the Helm chart.

This commit also adds the `cache-from` and `cache-to` parameters to the
GitHub Action to build the Docker image.

--- a/charts/script-exporter/values.yaml
+++ b/charts/script-exporter/values.yaml
@@ -19,7 +19,7 @@ imagePullSecrets: []
 ## Set the image which should be used for script_exporter.
 ##
 image:
-  repository: ricoberger/script_exporter
+  repository: ghcr.io/ricoberger/script_exporter
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
