--- a/charts/script-exporter/templates/deployment.yaml
+++ b/charts/script-exporter/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           args:
-            - -config.file=/etc/script-exporter/config.yaml
+            - -config.file={{ .Values.configFile | default "/etc/script-exporter/config.yaml" }}
           ports:
             - name: http
               containerPort: 9469
