--- a/charts/script-exporter/values.yaml
+++ b/charts/script-exporter/values.yaml
@@ -119,6 +119,8 @@ service:
   labels: {}
 
 serviceAccount:
+  create: false
+  annotations: {}
   name: ""
 
 ## Create a Service Monitor for the Prometheus Operator.
