feat(helm): only create SA if a name is provided

--- a/charts/script-exporter/templates/serviceaccount.yaml
+++ b/charts/script-exporter/templates/serviceaccount.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.serviceAccount.create }}
+{{- if and .Values.serviceAccount.create .Values.serviceAccount.name }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "script-exporter.fullname" . }}
+  name: {{ .Values.serviceAccount.name }}
   labels:
     {{- include "script-exporter.labels" . | nindent 4 }}
   {{- if .Values.serviceAccount.annotations }}
