Use GitHub Container Registry to Store Helm Chart
Instead of building and uploading the Helm Chart for the script_exporter
to the https://github.com/ricoberger/helm-charts repository, we are now
using the GitHub Container Registry to store the Helm chart.

Starting with the new version 1.0.0 the Helm chart will only be
available at `ghcr.io/ricoberger/charts/script-exporter`.

--- a/.github/workflows/continuous-delivery-docker.yaml
+++ b/.github/workflows/continuous-delivery-docker.yaml
@@ -1,3 +1,4 @@
+---
 name: Continuous Delivery
 
 on:
@@ -11,6 +12,7 @@ jobs:
   docker:
     name: Docker
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -58,3 +60,34 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:${{ env.TAG }}
             ricoberger/script_exporter:${{ env.TAG }}
+
+  helm:
+    name: Helm
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set Version
+        id: version
+        run: |
+          echo VERSION=$(yq -r .version ./charts/script-exporter/Chart.yaml) >> $GITHUB_ENV
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+
+      - name: Package and Push Helm Chart
+        run: |
+          helm package ./charts/script-exporter --version ${{ env.VERSION }}
+          helm push ./script-exporter-${{ env.VERSION }}.tgz oci://ghcr.io/${{ github.repository_owner }}/charts
