--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -1,7 +1,12 @@
 name: Continuous Integration
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   go:
@@ -24,49 +29,9 @@ jobs:
         uses: golangci/golangci-lint-action@v7
 
       - name: Test
-        run: go test ./...
+        run: |
+          make test
 
       - name: Build
-        run: make release
-
-      - name: Upload Artifacts (darwin-amd64)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-darwin-amd64
-          path: bin/script_exporter-darwin-amd64
-          if-no-files-found: error
-
-      - name: Upload Artifacts (darwin-arm64)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-darwin-arm64
-          path: bin/script_exporter-darwin-arm64
-          if-no-files-found: error
-
-      - name: Upload Artifacts (linux-amd64)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-linux-amd64
-          path: bin/script_exporter-linux-amd64
-          if-no-files-found: error
-
-      - name: Upload Artifacts (linux-armv7)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-linux-armv7
-          path: bin/script_exporter-linux-armv7
-          if-no-files-found: error
-
-      - name: Upload Artifacts (linux-arm64)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-linux-arm64
-          path: bin/script_exporter-linux-arm64
-          if-no-files-found: error
-
-      - name: Upload Artifacts (windows-amd64.exe)
-        uses: actions/upload-artifact@v4
-        with:
-          name: script_exporter-windows-amd64.exe
-          path: bin/script_exporter-windows-amd64.exe
-          if-no-files-found: error
+        run: |
+          make build
