--- a/charts/script-exporter/values.yaml
+++ b/charts/script-exporter/values.yaml
@@ -1,4 +1,4 @@
-# Default values for script_exporter.
+# Default values for Script Exporter.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -10,13 +10,13 @@ fullnameOverride: ""
 ##
 replicaCount: 1
 
-## Specify a list of image pull secrets, to avoid the DockerHub rate limit or to pull the script_exporter image from a
+## Specify a list of image pull secrets, to avoid the DockerHub rate limit or to pull the Script Exporter image from a
 ## private registry.
 ## See: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 ##
 imagePullSecrets: []
 
-## Set the image which should be used for script_exporter.
+## Set the image which should be used for Script Exporter.
 ##
 image:
   repository: ghcr.io/ricoberger/script_exporter
@@ -24,20 +24,18 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-## Specify security settings for the created Pods. To set the security settings for the script_exporter Container use
+## Specify security settings for the created Pods. To set the security settings for the Script Exporter Container use
 ## the corresponding "securityContext" field.
 ## See: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
 ##
-podSecurityContext:
-  {}
+podSecurityContext: {}
   # fsGroup: 2000
 
-## Specify security settings for the script_exporter Container. They override settings made at the Pod level via the
+## Specify security settings for the Script Exporter Container. They override settings made at the Pod level via the
 ## "podSecurityContext" when there is overlap.
 ## See: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
 ##
-securityContext:
-  {}
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -50,8 +48,7 @@ securityContext:
 ## specify resources, uncomment the following lines, adjust them as necessary, and remove the curly braces after
 ## 'resources:'.
 ##
-resources:
-  {}
+resources: {}
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
@@ -64,12 +61,12 @@ resources:
 ##
 nodeSelector: {}
 
-## Specify the tolerations for the script_exporter Pods.
+## Specify the tolerations for the Script Exporter Pods.
 ## See: https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/
 ##
 tolerations: []
 
-## Specify a node affinity or inter-pod affinity / anti-affinity for an advanced scheduling of the script_exporter Pods.
+## Specify a node affinity or inter-pod affinity / anti-affinity for an advanced scheduling of the Script Exporter Pods.
 ## See: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
 ##
 affinity: {}
@@ -77,8 +74,7 @@ affinity: {}
 ## Topology spread constraints rely on node labels to identify the topology domain(s) that each Node is in.
 ## See: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
 ##
-topologySpreadConstraints:
-  []
+topologySpreadConstraints: []
   # - maxSkew: 1
   #   topologyKey: topology.kubernetes.io/zone
   #   whenUnsatisfiable: DoNotSchedule
@@ -86,28 +82,30 @@ topologySpreadConstraints:
   #     matchLabels:
   #       app.kubernetes.io/name=hub
 
-## Specify additional volumes for the script_exporter deployment.
+## Specify additional volumes for the Script Exporter deployment.
 ## See: https://kubernetes.io/docs/concepts/storage/volumes/
 ##
-volumes:
-  []
+volumes: []
   # - name: scripts
   #   configMap:
   #     name: scripts
 
-## Specify additional volumeMounts for the script_exporter container.
+## Specify additional volumeMounts for the Script Exporter container.
 ## See: https://kubernetes.io/docs/concepts/storage/volumes/
 ##
-volumeMounts:
-  []
+volumeMounts: []
   # - name: scripts
-  #   mountPath: /scripts
+  #   mountPath: /script_exporter/scripts
   #   readOnly: true
 
-## Specify additional environment variables for the script_exporter container.
+## Specify additional arguments for the Script Exporter container.
 ##
-env:
-  []
+args:
+  - --config.files=/script_exporter/scripts/scripts.yaml
+
+## Specify additional environment variables for the Script Exporter container.
+##
+env: []
   # - name: MY_ENV_VAR
   #   value: MY_ENV_VALUE
 
@@ -168,8 +166,7 @@ serviceMonitor:
 
   ## MetricRelabelConfigs to apply to samples before ingestion.
   ##
-  metricRelabelings:
-    []
+  metricRelabelings: []
     # - action: keep
     #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
     #   sourceLabels: [__name__]
@@ -177,8 +174,7 @@ serviceMonitor:
   ## RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few
   ## standard Kubernetes fields and replaces original scrape job name with __tmp_prometheus_job_name.
   ##
-  relabelings:
-    []
+  relabelings: []
     # - sourceLabels: [__meta_kubernetes_pod_node_name]
     #   separator: ;
     #   regex: ^(.*)$
@@ -192,8 +188,7 @@ serviceMonitor:
   autoCreate:
     enabled: true
 
-  targets:
-    []
+  targets: []
     # - name: example                    # Human readable URL that will appear in Prometheus / AlertManager
     #   script: ping                     # Name of the script to target.
     #   labels: {}                       # Map of labels for ServiceMonitor. Overrides value set in `defaults`
@@ -234,8 +229,7 @@ selfServiceMonitor:
 
   ## MetricRelabelConfigs to apply to samples before ingestion.
   ##
-  metricRelabelings:
-    []
+  metricRelabelings: []
     # - action: keep
     #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
     #   sourceLabels: [__name__]
@@ -243,8 +237,7 @@ selfServiceMonitor:
   ## RelabelConfigs to apply to samples before scraping. Prometheus Operator automatically adds relabelings for a few
   ## standard Kubernetes fields and replaces original scrape job name with __tmp_prometheus_job_name.
   ##
-  relabelings:
-    []
+  relabelings: []
     # - sourceLabels: [__meta_kubernetes_pod_node_name]
     #   separator: ;
     #   regex: ^(.*)$
@@ -252,22 +245,22 @@ selfServiceMonitor:
     #   replacement: $1
     #   action: replace
 
-## The configuration file path for the script_exporter. It defaults to "/etc/script-exporter/config.yaml".
-configFile: ""
-
-## The configuration for the script_exporter as shown in
+## The configuration for the Script Exporter as shown in
 ## https://github.com/ricoberger/script_exporter/tree/main#usage-and-configuration
 ##
 config: |
   scripts:
-    - name: ping
-      command: /etc/script-exporter/ping.sh
+    - name: example
+      command:
+        - /script_exporter/scripts/example.sh
 
 ## A list of scripts which should be added to the container. It is also possible to add some scripts to the container,
 ## via the "volumes" and "volumeMounts" values.
 ##
 scripts:
-  ping.sh: |
-    #!/bin/bash
-    ping -c 3 $1 > /dev/null 2>&1
-    exit $?
+  example.sh: |
+    #!/usr/bin/env bash
+
+    echo '# HELP custom_metric A custom metric exported by the script'
+    echo '# TYPE custom_metric gauge'
+    echo 'custom_metric{script="example"} 1'
